Bug 1816574 - Force fit the content in nested multicol when ReflowConfig::mForceAuto is true. r=emilio

The testcase was originated from D169662 written by Daniel Holbert, which was
discovered by fuzzer in bug 1756202.

Note that the crashtest that hangs the browser might not always be reproducible
locally. It is reproducible on "Linux 18.04 x64 WebRender tsan opt" build on
try.

Differential Revision: https://phabricator.services.mozilla.com/D170532